--- a/CTF_101.md
+++ b/CTF_101.md
@@ -1,5 +1,5 @@
 # https://ctf.hacker101.com/
 1) A little something to get you started
 ```
-
+viewing the source code the image is their so /background.png get the flag 1
 ```
