--- a/CTF_101.md
+++ b/CTF_101.md
@@ -1,5 +1,5 @@
 # https://ctf.hacker101.com/
 1) A little something to get you started
 ```
-"By viewing the source code, you will see the image is there at /background.png. Get the flag 1."
+By viewing the source code, you will see the image is there at /background.png. Get the flag 
 ```
